--- a/src/app/page/sadbar/sadbar.component.css
+++ b/src/app/page/sadbar/sadbar.component.css
@@ -35,6 +35,11 @@
         flex-wrap: nowrap;
     }
     .our-special .container .box{
-        
+        width:360px;
+        height:540px;
+    }
+    .our-special .container .box img{
+        width: 360px;
+        height:360px;
     }
 }
