--- a/src/app/shared/about/about.component.html
+++ b/src/app/shared/about/about.component.html
@@ -1,11 +1,13 @@
-
 <div class="about">
-    <div class="container">
-        <div class="box">
-            <h1>BEST QUALITY FOOD</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias provident laborum, recusandae delectus corrupti reprehenderit error distinctio eligendi qui consequuntur officia.</p>
-            <button>BOOK TABLE</button>
-        </div>
+  <div class="container">
+    <div class="box">
+      <h1>BEST QUALITY FOOD</h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias
+        provident laborum, recusandae delectus corrupti reprehenderit error
+        distinctio eligendi qui consequuntur officia.
+      </p>
+      <button>BOOK TABLE</button>
     </div>
-    
+  </div>
 </div>
