--- a/src/app/shared/about/about.component.scss
+++ b/src/app/shared/about/about.component.scss
@@ -36,7 +36,13 @@
   max-width: 800px;
   position: absolute;
   top: 20%;
+  height: 540px;
 }
+.our-special .container .box img {
+  width: 360px;
+  height: 360px;
+}
+
 .about .container .box h1 {
   color: white;
   font-size: 80px;
