--- a/src/app/page/menu/menu.component.scss
+++ b/src/app/page/menu/menu.component.scss
@@ -39,7 +39,7 @@
     height:275px;
     border-radius: 5px;
     transition: 0.3;
-    z-index: -111;
+    // z-index: -111;
 }
 // .menu .container .box a img::after{
 //     content: "";
@@ -51,14 +51,14 @@
 //     z-index: 11;Gallery
 
 // }
-.menu .container .box a img::after:hover{
-    background-color: red;
-}
-@media (max-width:960px){
-    .menu .container .box a img:hover{
-        background-color: red;
-    }
-}
+// .menu .container .box a img::after:hover{
+//     background-color: red;
+// }
+// @media (max-width:960px){
+//     .menu .container .box a img:hover{
+//         background-color: red;
+//     }
+// }
 .menu .container .box h3{
     color: white;
     font-weight: bolder;
