--- a/src/app/page/sadbar/sadbar.component.html
+++ b/src/app/page/sadbar/sadbar.component.html
@@ -10,13 +10,24 @@
     </p>
   </div>
   <div class="container">
-    @for (slide of slides; track $index) {
-      <div class="box">
-        <img [src]="slide.img" alt="" />
-        <h3>{{ slide.title }}</h3>
-        <p>{{ slide.info }}</p>
-        <span>{{ slide.price }}</span>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        @for (slide of slides; track $index) {
+          <div class="swiper-slide">
+            <div class="box">
+              <img [src]="slide.img" alt="" />
+              <h3>{{ slide.title }}</h3>
+              <p>{{ slide.info }}</p>
+              <span>{{ slide.price }}</span>
+            </div>
+          </div>
+        }
       </div>
-    }
+      <div class="swiper-button-next"></div>
+      <!-- <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div> -->
+    </div>
+
+    @for (slide of slides; track $index) {}
   </div>
 </div>
