--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-hader />
-<app-sadbar />
+<app-header />
+<app-side-bar />
 <app-about-1 />
 <app-rivel />
 <app-chef />
-<app-menu/>
-<app-gallery/>
-<app-form/>
-<app-content/>
+<app-menu />
+<app-gallery />
+<app-form />
+<app-content />
