--- a/src/app/page/side-bar/side-bar.component.html
+++ b/src/app/page/side-bar/side-bar.component.html
@@ -24,8 +24,14 @@
         }
       </div>
       <div class="swiper-button-next"></div>
-      <!-- <div class="swiper-button-prev"></div>
-      <div class="swiper-pagination"></div> -->
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-pagination"></div>
+      <div class="autoplay-progress">
+        <svg viewBox="0 0 48 48">
+          <circle cx="24" cy="24" r="20"></circle>
+        </svg>
+        <span></span>
+      </div>
     </div>
 
     @for (slide of slides; track $index) {}
