--- a/src/app/page/side-bar/side-bar.component.scss
+++ b/src/app/page/side-bar/side-bar.component.scss
@@ -1,3 +1,19 @@
+.autoplay-progress svg {
+  --progress: 0;
+  position: absolute;
+  left: 0;
+  top: 0px;
+  z-index: 10;
+  width: 100%;
+  height: 100%;
+  stroke-width: 4px;
+  stroke: var(--swiper-theme-color);
+  fill: none;
+  stroke-dashoffset: calc(125.6px * (1 - var(--progress)));
+  stroke-dasharray: 125.6;
+  transform: rotate(-90deg);
+}
+
 .swiper-container {
   width: 100%;
   height: 100%;
